--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
-<h1>{{title}}</h1>
+    <div class="container">
+      <h1> Cadastro de Estudantes </h1>
+      <div>
+      <textarea>R.E.</textarea>
+      <br>
+      <textarea>Nome</textarea>
+      <br>
+      <textarea>Sobrenome</textarea>
+      <br>
+      <textarea>Data de nascimento</textarea>
+      <br>
+      <textarea>Celular</textarea>
+      <br>
+      <textarea>CPF</textarea>
+      <br>
+      <textarea>RG</textarea>
+      <br>
+      </div>
